deleting medication works now
